--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,19 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${spring.doc.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.18.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>2.18.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
