feat: add kafka

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ SPRING_LIQUIBASE_ENABLED=true
 # External APIs
 BANK_API_URL=https://cbr.ru/scripts/XML_daily.asp
 
+# Kafka configuration
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+
 # Logging levels
 LOG_LEVEL_ROOT=INFO
 LOG_LEVEL_WEB=INFO
