--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,17 @@ bank:
   api:
     url: ${BANK_API_URL:https://cbr.ru/scripts/XML_daily.asp}
 
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+  topics:
+    bank-account-events: bank-account-events
+  consumer:
+    group-id: globus-consumer-group
+    auto-offset-reset: earliest
+  producer:
+    acks: all
+    retries: 3
+
 logging:
   level:
     root: ${LOG_LEVEL_ROOT:INFO}
